lab2/k8s/service2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: service1-service
            port:
              number: 8080
      - path: /greet
        pathType: Prefix
        backend:
          service:
            name: service2-service
            port:
              number: 8080
